--- a/assets/css/cabecalho.css
+++ b/assets/css/cabecalho.css
@@ -99,7 +99,6 @@
         height: 55px;
     }
     #cabecalho div {
-        width: 300px;
         height: 40px;
     }
     #cabecalho a img {
@@ -131,14 +130,16 @@
         background: #000265;
     }
     #menu a {
+        border-radius: 30px;
         display: flex;
         border-bottom: none;
         font-size: 18px;
         margin: 0 .3rem;
         padding: .3rem .60rem;
+        transition: .5s;
     }
     #menu a:hover {
-        border-radius: 30px;
+        
         color: #F4F4F4;
         background: #000265;
         
