--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -116,7 +116,7 @@ main {
     position: relative;
     color: #000265;
     font-size: 32px;
-    margin-bottom: 10px;
+    margin-bottom: 2rem;
     padding: 5px;
     text-align: center;
 }
