--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -16,13 +16,14 @@
 /*================= seção de categoria ==================*/
 
 .categoria {
-    position: relative;
     background:  #fdfdfd;
     display: flex;
     padding: 1rem;
     overflow: auto;
     flex-direction: column;
     padding: 0.30rem;
+    align-items: center;
+    width: 100%;
 
 }
 .categoria::-webkit-scrollbar {
@@ -58,6 +59,7 @@
     box-shadow: 0px 1px 3px#2323235e;
     margin-bottom: 3rem;
     padding: 1rem;
+    width: 100%;
 }
 .chamada > h1 {
     color: #f70000;
@@ -76,6 +78,7 @@ main {
 }
 .container {
     padding: 0.30rem;
+    
 }
 .container__conteudo {
     position: relative;
@@ -206,6 +209,14 @@ hr {
     }
  }
  @media screen and (min-width: 1024px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .container {
+        max-width: 1400px;
+    }
     .banner_mobile {
         display: none;
     }
