--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -8,6 +8,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 body {
+    margin-top: 55px;
     font-size: 100%;
     background-color: #F4F4F4;
     /*background-color: #E2E2E2;*/
