atualização na seção categoria

--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -1,6 +1,7 @@
 /*================= seção de banner ==================*/
 
 .banner{
+    display: flex;
     width: 100%;
 }
 .banner__imagem {
@@ -13,22 +14,20 @@
 /*================= seção de categoria ==================*/
 
 .categoria {
+    position: relative;
     background:  #fdfdfd;
-    display: flex;
-    overflow: auto;
-    flex-direction: column;
     padding: 0.30rem;
-    align-items: center;
     width: 100%;
-
 }
-.categoria::-webkit-scrollbar {
-    display: none;
-  }
+
 .lista__categoria {
+    overflow: auto;
     max-width: 1400px;
     display: flex;
 }
+.lista__categoria::-webkit-scrollbar {
+    display: none;
+  }
 .item__categoria {
     align-items: center;
     cursor: pointer;
@@ -152,6 +151,7 @@ hr {
     box-sizing: border-box;
     margin: .50rem;
 }
+
 @media screen and (min-width: 768px) {
    
     .banner__imagem {
@@ -200,6 +200,7 @@ hr {
         width: 150px;
     }
  }
+
  @media screen and (min-width: 1024px) {
     main {
         display: flex;
@@ -218,6 +219,7 @@ hr {
         width: 100%;
     }
     .categoria {
+        display: flex;
         justify-content: center;
         padding:2rem 1rem;
     }
@@ -226,6 +228,9 @@ hr {
     }
     .item__categoria a {
         font-size: 15px;
+    }
+    .categoria .seta__direita, .categoria .seta__esquerda  {
+        display: none;
     }
     .container {
         padding: 2rem;
