add o contato ao rodape

--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .banner__contato {
     background: url('../imagem/banners/background-rodape.png')no-repeat center / cover;
     width: 100%;
