--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 * {
 	border: 0;
@@ -6,6 +7,7 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
+    list-style: none;
 }
 body {
     margin-top: 55px;
