--- a/assets/css/rodape.css
+++ b/assets/css/rodape.css
@@ -1,73 +1,101 @@
-.rodape__conteudo{
+@charset "UTF-8";
+
+.rodape {
+    position: relative;
     background: url('../imagem/banners/background-rodape.png') no-repeat center / cover;
     width: 100%;
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+}
+.rodape__conteudo{
+    display: flex;
     justify-content:space-evenly;
     align-items: center;
+    flex-direction: column;
+    height: 300px;
+    width: 100%;
+    max-width: 1400px;
+    position: relative;
 }
+
 .rodape__titulo {
-    color: #FDFDFD;
-    padding-bottom: 1rem;
+    color: #F4F4F4;
+    padding-bottom: .3rem;
+    font-size: 18px
 }
 .rodape__imagem__bandeiras {
     border-radius: 10px;
-    width: 300px;
+    width: 200px;
 }
 .rodape__descricao {
     color: #FDFDFD;
     padding-bottom: .5rem;
+    font-size: 14px;
+}
+.rodape__right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contato__titulo {
+    font-size: 20px;
+    margin-bottom: 1rem;
+    color: #F7F700;
+    text-align: center;
+}
+.contato {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    margin-bottom: .4rem;
+}
+.contato a {
+    font-size: 13px;
+    color: #F4F4F4;
+    text-decoration: underline;
+}
+.contato img {
+    width: 20px;
+    color: #F7F700;
 }
 .copyright {
     background: url('../imagem/banners/background-copyright.png') no-repeat center / cover;
     padding: 2px 0;
     text-align: center;
     width: 100%;
+    font-size: 12px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
 }
 
-@media screen and (min-width: 0) {
-    .rodape__conteudo {
-        flex-direction: column;
-        height: 250px;
-        padding: 0;
-    }
-    .rodape__imagem__logo {
-        width: 100px;
-    }
-    .rodape__imagem__bandeiras {
-        width: 200px;
-    }
-    .rodape__right {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .rodape__titulo {
-        font-size: 18px
-    }
-    .rodape__descricao {
-        font-size: 14px;
-    }
-    .copyright {
-        font-size: 12px;
-    }
-}
+
 @media screen and (min-width: 768px) {
     .rodape__conteudo {
         flex-direction: row;
-        height: 300px;
-        padding: 6rem 0; 
-    }
-    .rodape__imagem__logo {
-        width: 100%;
+        padding: 5rem 0; 
     }
     .rodape__titulo {
-        font-size: 20px
+        font-size: 20px;
+        padding-bottom: 1rem;
     }
     .rodape__imagem__bandeiras {
         width: 300px;
     }
     .rodape__right {
         align-items: flex-start;
+    }
+    .contato__titulo {
+        font-size: 22px;
+        text-align: start;
+    }
+    .contato a {
+        font-size: 15px;
+    }
+    .contato img {
+        width: 25px;
     }
     .rodape__descricao {
         font-size: 16px;
